Edited homepage so that recipes are on separate lines

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
    <h1>Odin Recipes</h1> 
 
-   <a href = "recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a>
-   <a href = "recipes/cronuts.html">Cronuts</a>
-   <a href = "recipes/brownie_pie.html">Brownie Pie</a>
+   <p><a href = "recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a></p>
+   <p><a href = "recipes/cronuts.html">Cronuts</a></p>
+   <p><a href = "recipes/brownie_pie.html">Brownie Pie</a></p>
 </body>
 </html>
