Finished all components of Cronut page

--- a/recipes/chicken-tortilla-soup.html
+++ b/recipes/chicken-tortilla-soup.html
@@ -19,7 +19,7 @@
         <li>1 medium onion, chopped</li>
         <li>3 clove garlic, minced</li>
         <li>1 (28 ounce) can crushed tomatoes</li>
-        <li>1 (10.5) ounce can condensed chicken broth</li>
+        <li>1 (10.5 ounce) can condensed chicken broth</li>
         <li>1.25 cups water</li>
         <li>2 teaspoons chili powder</li>
         <li>1 teaspoon dried oregano</li>
