--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
    <h1>Odin Recipes</h1> 
-
-   <p><a href = "recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a></p>
-   <p><a href = "recipes/cronuts.html">Cronuts</a></p>
-   <p><a href = "recipes/brownie_pie.html">Brownie Pie</a></p>
+   <ul>
+    <li><a href = "recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a></li>
+    <li><a href = "recipes/cronuts.html">Cronuts</a></li>
+    <li><a href = "recipes/brownie_pie.html">Brownie Pie</a></li>
+    </ul>
 </body>
 </html>
